--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,7 +34,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - uses: actions/setup-node@v4
-      - run: npm install
+      - name: Install dependencies
+        run: npm install
+        working-directory: zadanie-13
+
       - run: npm run build -- --base=/zadanie13
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
